fix verification
